Fixed overflow:hidden status on app.css

--- a/auction/web/css/app.css
+++ b/auction/web/css/app.css
@@ -16,7 +16,7 @@ body {
 .cover-container {
     background: #29293a;
     overflow: hidden;
-    height: 250px;
+    height: 400px;
 }
 
 .cover-wrapper {
